All updates Week2

--- a/css/styles.css
+++ b/css/styles.css
@@ -25,8 +25,23 @@ footer {
     padding: 20px 0;
 }
 
+.jumbotron {
+    background-image: linear-gradient(to right, #5637DD, #3046C5, #60106B);
+    background-size: cover;
+    background-position: center;
+    color: white;
+    padding: 48px 0;
+}
+
 .row-content {
     padding: 50px 0;
     border-bottom: 1px ridge;
     min-height: 200px;
+}
+.navbar {
+    background-color: #901CAD;
+}
+
+.navbar-toggler {
+    margin-left: auto;
 }
