--- a/css/styles.css
+++ b/css/styles.css
@@ -1,59 +1,29 @@
 body {
-    font-family: "Open Sans", sans-serif;
-}
+  font-family: "Open Sans", sans-serif; }
 
 h1, h2, h3 {
-   font-family: "Lobster", cursive;
-}
+  font-family: "Lobster", cursive; }
 
 h2 {
-   color: #3046C5;
-}
-
-header {
-    padding: 30px;
-    background-image: linear-gradient(to right, #5637DD, #3046C5, #60106B);
-    color: white;
-}
+  color: #3046C5; }
 
 header h2 {
-    color: #CEC8FF;
-}
+  color: #CEC8FF; }
 
 footer {
-    background-image:linear-gradient(#CEC8FF,white);
-    padding: 20px 0;
-}
+  background-image: linear-gradient(#CEC8FF, white);
+  padding: 20px 0; }
 
-.jumbotron {
-    background-image: linear-gradient(to right, #5637DD, #3046C5, #60106B);
-    background-size: cover;
-    background-position: center;
-    color: white;
-    padding: 48px 0;
-}
+header {
+  padding: 30px;
+  background-image: linear-gradient(to right, #5637dd, #3046C5, #60106b);
+  color: white; }
 
-.row-content {
-    padding: 50px 0;
-    border-bottom: 1px ridge;
-    min-height: 200px;
-}
 .navbar {
-    background-color: #901CAD;
-}
-
-.navbar-toggler {
-    margin-left: auto;
-}
-
-a, a:hover {
-    color: inherit;
-    text-decoration: none;
-  }
-  .carousel-caption {
-    background-color: rgba(0, 0, 0, 0.5);
-}
+  background-color: #901CAD; }
 
 .carousel {
-    border: solid #5637DD;
-}
+  border: solid #5637dd; }
+
+.carousel-caption {
+  background-color: rgba(0, 0, 0, 0.5); }
