--- a/css/styles.scss
+++ b/css/styles.scss
@@ -4,6 +4,7 @@ $color-pale: #CEC8FF;
 $color-mid: #901CAD;
 $color-dark: #60106b;
 $color-black-transparent: rgba(0, 0, 0, 0.5);
+$color-teal: #17A2B8;
 
 $body-font: "Open Sans", sans-serif;
 $header-font: "Lobster", cursive;
@@ -48,3 +49,5 @@ header {
 .carousel-caption {
     background-color: $color-black-transparent;
 }
+
+@import 'modal';
