--- a/css/styles.css
+++ b/css/styles.css
@@ -28,12 +28,6 @@ header {
 .carousel-caption {
   background-color: rgba(0, 0, 0, 0.5); }
 
-  .tab-content {
-    border: 1px solid #DDD;
-    border-top: none;
-    padding: 10px;
-}
-
 #reserveModal .modal-header {
   background-image: #17A2B8;
   color: white; }
@@ -41,3 +35,15 @@ header {
 #loginModal .modal-header {
   background-image: #901CAD;
   color: white; }
+
+.review-section {
+  background: beige; }
+
+.campsite-btn {
+  background: #0dcaf0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0.5rem 1rem;
+  border-radius: 0.5rem;
+  width: 60%; }
